ex_3.3/log_output/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-route
  namespace: exercises
spec:
  parentRefs:
    - name: my-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: log-output-svc
          port: 2345

    - matches:
        - path:
            type: PathPrefix
            value: /pingpong
      backendRefs:
        - name: ping-pong-svc
          port: 3000
